# stage-profiler

./: .gitignore  LICENSE  README.md  Route Profile Options.dc.html  pyproject.toml  races.example.json  sample.gpx  tdf-2026-backup.json  tdf-2026.json
examples/: demo.py  races.example.json  stage-1-parcours.gpx  stage-15-parcours.gpx  stage-4-parcours.gpx
scripts/: generate_roadbook.py
src/stage_profiler/: __init__.py  __main__.py  cli.py  geometry.py  gpx.py  map.py  profile.py  ramp.py  render.py  roadbook.py  steepness.py  theme.py
tests/: test_stage_map.py  test_stage_profiler.py
