[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stage-profiler"
version = "0.2.0"
description = "A roadbook toolkit: turn a GPX route into a segmented steepness-band stage-profile SVG and a country GeoJSON into a stage-map SVG, in one baked-in design."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Stage Profiler contributors" }]
keywords = ["gpx", "elevation", "profile", "svg", "cycling", "route", "map", "geojson"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]
dependencies = [
    "shapely>=2.0",
    "pyproj>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/dontseyit/stage-profiler"
Repository = "https://github.com/dontseyit/stage-profiler"
Issues = "https://github.com/dontseyit/stage-profiler/issues"

[project.scripts]
stage-profiler = "stage_profiler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stage_profiler = ["py.typed"]
